Your commit message

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 OPENWEATHER_API_KEY=4668d85c40a9a9beea06a7b9aabda996
 NEWS_API_KEY=6b1ba02d2c7340cea48f3f651094c31d
+RAPIDAPI_KEY=7017a75daamshecccdadd02e0e84p18be03jsne61eb3333810
